fixed z-index for mobile menu

--- a/src/components/MobileNav/MobileNav.module.scss
+++ b/src/components/MobileNav/MobileNav.module.scss
@@ -13,7 +13,7 @@
   height: 100vh;
   width: 100vw;
   position: fixed;
-  z-index: 3;
+  z-index: 10;
   left: 0;
   top: 0;
   background-color: rgba(0, 0, 0, 0.9);
@@ -38,7 +38,7 @@
     color: beige;
     opacity: 1;
     background-color: rgba(0, 0, 0, 0);
-    z-index: 3;
+    z-index: 10;
     gap: 20px;
     .link {
       width: 100%;
